[tool.poetry]
name = "doc2pdf"
version = "0.1.0"
description = "A package to convert Doc files to PDF."
authors = ["Silas Vasconcelos <silasvasconcelos@hotmail.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
